--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body, html {
   padding: 0.75rem 1rem;
   font-weight: 500;
   border-radius: 0.5rem;
-  background-color: rgba(255, 255, 255, 0.08);
+  background-color: rgba(163, 160, 160, 0.08);
   border: none;
   color: black;
   transition: all 0.3s ease, transform 0.2s ease;
@@ -64,7 +64,6 @@ body, html {
 }
 
 .category-button:hover {
-  background-color: rgba(255, 255, 255, 0.15);
   transform: translateX(5px) translateY(-2px);
 }
 
@@ -146,7 +145,11 @@ ul {
   justify-content: center;   /* Horizontal centering */
   align-items: center;       /* Vertical centering */
   font-size: 15px;           /* Font size */
-  font-weight: bold;         /* Optional: Make it bold */
+  font-weight: bold;  
+  margin-bottom: 5px;
+  margin-left:5px;
+  margin-right:5px;
+  border-radius: 5px;
 }
 
 /* Body: bottom 90% */
@@ -157,8 +160,11 @@ ul {
   padding-top: 0.5rem;
   box-sizing: border-box;
   background-color: #fefefe;
-  box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.03);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.06);
   border-top: 1px solid rgba(0, 0, 0, 0.05);
+  margin-left:5px;
+  border-radius: 5px;
+  margin-right: 5px;
 }
 
 /* Optional question card design */
@@ -169,7 +175,6 @@ ul {
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
-  
 }
 
 .question-card:hover {
