--- a/src/App.css
+++ b/src/App.css
@@ -216,13 +216,13 @@ ul {
 }
 
 .custom-radio.bg-yellow-400 input[type="radio"]:checked + span {
-  background-color: #FBBF24; /* Yellow */
+  background-color: #FBBF24; 
   color: white;
   border-color: #FBBF24;
 }
 
 .custom-radio.bg-green-400 input[type="radio"]:checked + span {
-  background-color: #4ADE80; /* Green */
+  background-color: #4ADE80; 
   color: white;
   border-color: #4ADE80;
 }
